styles.css
body, html {
    margin: 0;
    padding: 0;
    height: 100%;
}
#tourVid {
    left: -250px;
    position: fixed;
    bottom: 10px;
    min-width: 150%;
    min-height: 150%;
    opacity: .4;
}
#background {
    z-index: 0;
    pointer-events: none;
}
.text {
    text-align: center;
    font-size: 60px;
    font-family: Verdana;
}
#pass {
    position: relative;
    height: 100%;
    width: auto;
    margin: 0 auto;
    display: block;
    bottom: 0;
    z-index: 10;
}
#passport {
    position: absolute;
    left: 0;
    right: 0;
    max-height: 100%;
    max-width: 100%;
    margin: 0 auto;
    display: block;
    top: 0;
    z-index: 10;
}
#passButton, a:link,a:visited {
    top: 20px;
    color: white;
    display: block;
    text-align: center;
    opacity: .8;
    position: relative;
    border-radius: 10px;
    text-decoration: none;
    z-index: 15;
}
#stImageContainer {
    background-image: url("images/StampPage.png");
    background-size: cover;
    background-repeat: no-repeat;
}
.wrapper {
    height: 100%;
    display: grid;
    grid-gap: 10px;
    grid-template-columns: repeat(4, [col] auto ) ;
    grid-template-rows: repeat(2, [row] auto  );
    background-color: #fff;
    color: #444;
}
.box {
    margin: 50px;
    background-color: #444;
    color: #fff;
    border-radius: 5px;
    padding: 20px;
    font-size: 150%;
}
#placeholder1 {
      position: relative;
      padding: 0;
      margin-right: 100px;
      margin-left: 100px;
      grid-column: col / span 2;
      grid-row: row 1;
}
#placeholder2 {
      margin-right: 100px;
      margin-left: 100px;
      padding: 0;
      grid-column: col / span 2;
      grid-row: row 2;
      opacity: 0;
}
#placeholder3 {
      margin-left: 50px;
      margin-right: 0px;
}
#placeholder5 {
      margin-left:50px;
      margin-right: 0px;
}
.adapt{
      position: absolute;
      bottom: 0;
      text-align: center;
      width: 100%;
      height: 100%;
}
@media screen and (max-width: 899px)
{
    #stImageContainer {
        background-image: url("images/stampPage1.png");
    }
    .wrapper{
        grid-template-columns: repeat(2, [col] auto ) ;
        grid-template-rows: repeat(3, [row] auto  );
    }
    #placeholder1 {
        margin : 20px;
    }
    #placeholder2 {
        margin: 10px;
        z-index: -5;
        grid-column: col / span 2;
        grid-row: row 1;
    }
    #placeholder3 {
        margin: 10px;
        grid-column: col;
        grid-row: row 2;
    }
    #placeholder4 {
        margin: 10px;
        grid-column: col 2;
        grid-row: row 2;
    }
    #placeholder5 {
        margin: 10px;
        grid-column: col;
        grid-row: row 3;
    }
    #placeholder6 {
        margin: 10px;
        grid-column: col 2;
        grid-row: row 3;
    }
}

